# alloy

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  env.example  install.sh  render.yaml  repro_ls  rustfmt.toml  verify_mobile.py  verify_sidebar.py
.Jules/: palette.md
.github/workflows/: ci-dashboard.yml  ci-rust.yml  release.yml
.jules/: bolt.md  sentinel.md
cli/: Cargo.toml
cli/src/: archive.rs  client.rs  config_store.rs  main.rs
cli/src/commands/: artifacts.rs  cancel.rs  config.rs  jobs.rs  logs.rs  mod.rs  retry.rs  run.rs  status.rs
dashboard/: .env.example  .prettierrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
dashboard/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
dashboard/src/assets/: privacy.md  terms.md
dashboard/src/components/: BillingSettings.tsx  GithubIcon.tsx  LiveLogPanel.tsx  RawMarkdownPage.tsx  Sidebar.tsx
dashboard/src/contexts/: AuthContext.tsx
dashboard/src/lib/: api.ts  supabase.ts
dashboard/src/pages/: Billing.tsx  BillingSetup.tsx  Dashboard.tsx  JobDetail.tsx  Landing.tsx  Login.tsx  PrivacyPolicy.tsx  Settings.tsx  Signup.tsx  TermsOfService.tsx
docs/: README.md  cli-usage.md  examples.md  getting-started.md  installation.md  setup-cloud.md  setup-self-hosted.md  setup-worker.md  vm-base-image.md
orchestrator/: Cargo.toml
orchestrator/src/: auth.rs  config.rs  crypto.rs  main.rs  rate_limit.rs  state.rs
orchestrator/src/db/: mod.rs  sqlite.rs
orchestrator/src/routes/: auth_routes.rs  health.rs  jobs.rs  logs.rs  mod.rs  workers.rs
orchestrator/src/services/: mod.rs  supabase.rs
scripts/: pre-commit  setup-hooks.sh  vm-setup.sh
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  models.rs
supabase/.temp/: pooler-url  project-ref
supabase/functions/create-checkout/: index.ts
supabase/functions/create-portal/: index.ts
supabase/functions/stripe-webhook/: index.ts
supabase/migrations/: 20251224203125_init.sql  20251225_billing.sql  20251226010700_job_logs.sql  20251226_billing.sql  20251226_job_logs.sql  20251227000000_secure_sources.sql  20251227053500_add_uploading_status.sql
supabase/schemas/: prod.sql  schema.sql
worker/: Cargo.toml
worker/src/: config.rs  executor.rs  main.rs  orchestrator_client.rs  vm_pool.rs
