[workspace]
resolver = "2"
members = [
    "orchestrator",
    "worker", 
    "cli",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jules Mac Runner Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono"] }
postgrest = "1.0"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"

# Billing
async-stripe = { version = "0.31", default-features = false, features = ["runtime-tokio-hyper"] }
