[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "alloy"
path = "src/main.rs"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
shared = { path = "../shared" }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client
reqwest.workspace = true

# CLI
clap.workspace = true

# WebSocket for log streaming
tokio-tungstenite.workspace = true
futures-util.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
uuid.workspace = true
anyhow.workspace = true
dotenvy.workspace = true

# Terminal UI
crossterm = "0.27"

# File archiving for local uploads
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2"
ignore = "0.4"  # For .gitignore support
