[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true
postgrest.workspace = true

# HTTP client (for Supabase)
reqwest.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# WebSocket
tokio-tungstenite.workspace = true
futures-util.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
async-trait.workspace = true

# Billing
async-stripe.workspace = true
md5 = "0.8.0"
sha2 = "0.10.9"
