[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
shared = { path = "../shared" }

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true
postgrest.workspace = true

# HTTP client (for Supabase)
reqwest.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# WebSocket
tokio-tungstenite.workspace = true
futures-util.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
async-trait.workspace = true

# Billing
async-stripe.workspace = true

# Security - Cryptographic hashing
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Rate limiting
tower_governor = "0.4"
governor = "0.6"
