[package]
name = "worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client
reqwest.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true

# Hostname detection
hostname = "0.3"
tokio-util = { version = "0.7.17", features = ["io"] }
